<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.movilidad.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_empresas"
        android:name="com.app.movilidad.ui.EmpresaFragment"
        android:label="@string/menu_empresas"
        />

    <fragment
        android:id="@+id/nav_servicio_registrar"
        android:name="com.app.movilidad.ui.ServicioRegistrarFragment"
        android:label="@string/menu_servicio_registrar"
   />
    <fragment
        android:id="@+id/nav_hijo"
        android:name="com.app.movilidad.ui.HijoFragment"
        android:label="@string/menu_hijo"
        />
    <fragment
        android:id="@+id/nav_servicio_aceptacion"
        android:name="com.app.movilidad.ui.ServicioAceptacionFragment"
        android:label="@string/menu_servicio_aceptacion"
        />

    <fragment
        android:id="@+id/nav_ruta"
        android:name="com.app.movilidad.ui.ServicioRutaFragment"
        android:label="@string/menu_ruta"
        />
    <fragment
        android:id="@+id/nav_calificacion"
        android:name="com.app.movilidad.ui.CalificacionFragment"
        android:label="@string/menu_calificacion"
        />
    <fragment
        android:id="@+id/nav_servicio_historial"
        android:name="com.app.movilidad.ui.ServicioHistorialFragment"
        android:label="@string/menu_historial"
        />
    <fragment
        android:id="@+id/nav_vehiculos"
        android:name="com.app.movilidad.ui.VehiculosFragment"
        android:label="@string/menu_vehiculos"
        />
    <fragment
        android:id="@+id/nav_servicios_chofer"
        android:name="com.app.movilidad.ui.ServiciosChoferFragment"
        android:label="@string/menu_servicios_chofer"
        />


    <fragment
        android:id="@+id/nav_servicios_ruta_hoy"
        android:name="com.app.movilidad.ui.ServiciosRutasHoyFragment"
        android:label="@string/menu_servicios_rutas_hoy"
        />
    <fragment
        android:id="@+id/nav_servicios_ruta_historial"
        android:name="com.app.movilidad.ui.ServiciosRutaHistorialFragment"
        android:label="@string/menu_servicios_rutas_historial"
        />


    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.app.movilidad.ui.PerfilFragment"
        android:label="@string/menu_perfil"
        />



    <fragment
        android:id="@+id/nav_logout"
        android:name="com.app.movilidad.ui.HijoFragment"
        android:label="@string/menu_hijo" />
</navigation>